# drf-search-service

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
example_project/: Dockerfile  requirements.txt
example_project/api/: urls.py
example_project/example_project/: settings.py  urls.py
example_project/exemplar/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
search_service/: .views.py.swp  apps.py  authentication.py  filters.py  models.py  pagination.py  parsers.py  serializer_utils.py  serializers.py  settings.py  signals.py  tasks.py  urls.py  views.py
search_service/language/: indexable.py  langbase.py  pg_languages.py
search_service/management/commands/: nuke_data.py
search_service/migrations/: 0001_initial.py  0002_context_indexable_contexts_jsonresource_contexts.py  0002_indexables_group_id.py  0002_namespace_indexable_namespaces_and_more.py  0003_jsonresource_type.py  0003_remove_indexables_uppercase_indexables_and_more.py
search_service/serializers/: api.py  fields.py  indexing.py  query_param.py  search.py
search_service/urls/: api.py  public.py
tests/: conftest.py  docker-compose.test.yml  pytest_requirements.txt
tests/fixtures/iiif/: vol3.json
tests/fixtures/tags/: tags_truncated.json
tests/fixtures/text/: lagq.json  na_ad.json  na_en_ad.json  na_en_jl.json  na_jl.json
tests/search_service/: test_indexing.py  test_json_resource_indexing.py  test_namespacing.py  test_resource_relationship_api.py  test_resource_relationship_indexing.py  test_sandboxing.py  test_search_service_api.py
