[tool.poetry]
name = "drf-search-service"
version = "0.1.0"
description = "Django REST Framework Search Service"
authors = ["Finlay McCourt <finlaymccourt@gmail.com>"]
readme = "README.md"
packages = [
    { include = "search_service" },
]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"
Django = "^4.1.4"
djangorestframework = "^3.14.0"
requests = "^2.28.1"
bleach = "^4.1.0"
django-extensions = "^3.2.1"
django-model-utils = "^4.3.1"
ordered-set = "^4.1.0"
psycopg2-binary = "^2.9.5"
django-filter = "^21.1"
python-dateutil = "^2.8.2"
django-environ = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
